--- a/.github/workflows/deployto-prox.yml
+++ b/.github/workflows/deployto-prox.yml
@@ -35,6 +35,10 @@ jobs:
         AWS_REGION: "eu-west-1"
         AWS_OIDC_ROLE: 'arn:aws:iam::520686339686:role/github-oidc'
         AWS_OIDC_SESSION_NAME: 'github-test'
+        tfvars: |
+          {
+            "TF_VAR_pm_password": "${{ secrets.pm_password }}"
+          }
         pre_tasks: |
           steps:
             - name: Get ephemeral Tailscale auth key
@@ -76,11 +80,12 @@ jobs:
           - name: Connect to Tailscale
             run: |
               sudo tailscale up --authkey=${{ steps.get-key.outputs.auth_key }}
-    secrets:
-      tfvars: |
-        {
-          "TF_VAR_pm_password": "${{ secrets.pm_password }}"
-        }
+
+    # secrets:
+    #   tfvars: |
+    #     {
+    #       "TF_VAR_pm_password": "${{ secrets.pm_password }}"
+    #     }
 
         
 
