--- a/.github/workflows/deployto-prox.yml
+++ b/.github/workflows/deployto-prox.yml
@@ -35,47 +35,48 @@ jobs:
         AWS_REGION: "eu-west-1"
         AWS_OIDC_ROLE: 'arn:aws:iam::520686339686:role/github-oidc'
         AWS_OIDC_SESSION_NAME: 'github-test'
-        pre_tasks: |
-          steps:
-            - name: Get ephemeral Tailscale auth key
-              id: get-key
-              run: |
-                AUTH_KEY_JSON=$(curl -s -X POST "https://api.tailscale.com/api/v2/tailnet/${{ secrets.TAILNET }}/keys" \
-                  -u "${{ secrets.TS_TOKEN }}:" \
-                  -H "Content-Type: application/json" \
-                  -d '{
-                    "capabilities": {
-                      "devices": {
-                        "create": {
-                          "reusable": false,
-                          "ephemeral": true,
-                          "preauthorized": true
-                        }
-                      }
-                    },
-                    "expirySeconds": 600
-                  }')
+        tailscale: true
+        # pre_tasks: |
+        #   steps:
+        #     - name: Get ephemeral Tailscale auth key
+        #       id: get-key
+        #       run: |
+        #         AUTH_KEY_JSON=$(curl -s -X POST "https://api.tailscale.com/api/v2/tailnet/${{ secrets.TAILNET }}/keys" \
+        #           -u "${{ secrets.TS_TOKEN }}:" \
+        #           -H "Content-Type: application/json" \
+        #           -d '{
+        #             "capabilities": {
+        #               "devices": {
+        #                 "create": {
+        #                   "reusable": false,
+        #                   "ephemeral": true,
+        #                   "preauthorized": true
+        #                 }
+        #               }
+        #             },
+        #             "expirySeconds": 600
+        #           }')
                 
-                AUTH_KEY=$(echo "$AUTH_KEY_JSON" | jq -r .key)
+        #         AUTH_KEY=$(echo "$AUTH_KEY_JSON" | jq -r .key)
 
-                # Mask the key so it never appears in logs
-                echo "::add-mask::$AUTH_KEY"
+        #         # Mask the key so it never appears in logs
+        #         echo "::add-mask::$AUTH_KEY"
 
-                # Store it for later steps
-                echo "auth_key=$AUTH_KEY" >> $GITHUB_OUTPUT
+        #         # Store it for later steps
+        #         echo "auth_key=$AUTH_KEY" >> $GITHUB_OUTPUT
 
-          - name: Install Tailscale
-            run: |
-              curl -fsSL https://tailscale.com/install.sh | sh
+        #   - name: Install Tailscale
+        #     run: |
+        #       curl -fsSL https://tailscale.com/install.sh | sh
 
-          - name: Start Tailscaled (userspace networking mode)
-            run: |
-              sudo tailscaled --tun=userspace-networking --socks5-server=localhost:1055 &
-              sleep 5
+        #   - name: Start Tailscaled (userspace networking mode)
+        #     run: |
+        #       sudo tailscaled --tun=userspace-networking --socks5-server=localhost:1055 &
+        #       sleep 5
 
-          - name: Connect to Tailscale
-            run: |
-              sudo tailscale up --authkey=${{ steps.get-key.outputs.auth_key }}
+        #   - name: Connect to Tailscale
+        #     run: |
+        #       sudo tailscale up --authkey=${{ steps.get-key.outputs.auth_key }}
 
     secrets: inherit
      
@@ -85,7 +86,13 @@ jobs:
       # TAILNET: ${{ secrets.TAILNET }}
 
 
-        
+    #   - name: Tailscale
+    # uses: tailscale/github-action@v3
+    # with:
+    #   oauth-client-id: ${{ secrets.TS_OAUTH_CLIENT_ID }}
+    #   oauth-secret: ${{ secrets.TS_OAUTH_SECRET }}
+    #   tags: tag:ci
+    #   version: 1.66.0  
 
   # register_to_tailscale:
   #   name: register tailscale
