--- a/.github/workflows/deployto-prox.yml
+++ b/.github/workflows/deployto-prox.yml
@@ -7,10 +7,7 @@ on:
               description: 'TF File Path'     
               required: false
               default: 'infra'
-    # secrets:
-    #   ARM_CLIENT_ID:
-    #       description: 'service principal id'
-    #       required: false
+
             
 permissions:
     id-token: write
@@ -21,21 +18,105 @@ jobs:
     uses: Bazilbrush/terraform-templates/.github/workflows/terraform-validate.yml@main
     with:
         tfpath: infra
+
+
+  provision:
+    name: provision on proxmox
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2.5.0
+
+      - name: Get ephemeral Tailscale auth key
+        id: get-key
+        run: |
+          AUTH_KEY_JSON=$(curl -s -X POST "https://api.tailscale.com/api/v2/tailnet/${{ secrets.TAILNET }}/keys" \
+            -u "${{ secrets.TS_TOKEN }}:" \
+            -H "Content-Type: application/json" \
+            -d '{
+              "capabilities": {
+                "devices": {
+                  "create": {
+                    "reusable": false,
+                    "ephemeral": true,
+                    "preauthorized": true
+                  }
+                }
+              },
+              "expirySeconds": 600
+            }')
+          
+          AUTH_KEY=$(echo "$AUTH_KEY_JSON" | jq -r .key)
+
+          # Mask the key so it never appears in logs
+          echo "::add-mask::$AUTH_KEY"
+
+          # Store it for later steps
+          echo "auth_key=$AUTH_KEY" >> $GITHUB_OUTPUT
+
+
+      - name: Install Tailscale
+        run: |
+          curl -fsSL https://tailscale.com/install.sh | sh
+
+      - name: Start Tailscaled (userspace networking mode)
+        run: |
+          sudo tailscaled --tun=userspace-networking --socks5-server=localhost:1055 &
+          sleep 5
+
+      - name: Connect to Tailscale
+        run: |
+          sudo tailscale up --authkey=${{ steps.get-key.outputs.auth_key }}
+
+      - name: Debug tailscale status
+        run: tailscale status
+    # terraform
+      - name: Setup Terraform CLI
+        uses: hashicorp/setup-terraform@v2.0.2
+        with: 
+          terraform_version: 1.12.0  # yes we wanna hardcode this as we dont want people setting their own
+
+      - name: configure aws credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: 'arn:aws:iam::520686339686:role/github-oidc'
+          role-session-name: 'github-test'
+          aws-region: "eu-west-1"
+
+      - name: Get OIDC Token      
+        id: get_oidc_token      
+        run: |         
+          curl -s -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL&audience=sts.amazonaws.com" | jq -r '.value' > /tmp/web_identity_token_file
+
+      - name: Terraform Plan
+        working-directory: ${{ github.event.inputs.tfpath }}
+        env:
+          TF_VAR_pm_password: ${{ secrets.pm_password }}
+        run: |
+          echo `pwd`
+          echo "tfpath ${{ github.event.inputs.tfpath }}"
+          echo "** Running Terraform Init**"
+          echo running in aws
+          terraform init -backend-config="bucket=jackbazbackend" -backend-config="key=tests/integration/proxmox.tfstate" -backend-config="region=eu-west-1"
+         
+          terraform workspace select integration || terraform workspace new integration
+          echo "** Running Terraform Plan**"
+          terraform plan -input=false -var-file="integration.tfvars" -out=create-integration.tfplan
+
   
-  terraform-plan:
-    uses: Bazilbrush/terraform-templates/.github/workflows/terraform-plan.yml@main
-    if: ${{ always() }}
-    needs: terraform-validate
-    with:
-        tfpath: infra
-        backend-platform: aws
-        TF_ENV: integration
-        AWS_BUCKET: jackbazbackend
-        BACKEND_KEY: tests/integration/proxmox.tfstate
-        AWS_REGION: "eu-west-1"
-        AWS_OIDC_ROLE: 'arn:aws:iam::520686339686:role/github-oidc'
-        AWS_OIDC_SESSION_NAME: 'github-test'
-        tailscale: true
+  # terraform-plan:
+  #   uses: Bazilbrush/terraform-templates/.github/workflows/terraform-plan.yml@main
+  #   if: ${{ always() }}
+  #   needs: terraform-validate
+  #   with:
+  #       tfpath: infra
+  #       backend-platform: aws
+  #       TF_ENV: integration
+  #       AWS_BUCKET: jackbazbackend
+  #       BACKEND_KEY: tests/integration/proxmox.tfstate
+  #       AWS_REGION: "eu-west-1"
+  #       AWS_OIDC_ROLE: 'arn:aws:iam::520686339686:role/github-oidc'
+  #       AWS_OIDC_SESSION_NAME: 'github-test'
+  #       tailscale: true
         
         # pre_tasks: |
         #   steps:
@@ -79,7 +160,7 @@ jobs:
         #     run: |
         #       sudo tailscale up --authkey=${{ steps.get-key.outputs.auth_key }}
 
-    secrets: inherit
+    # secrets: inherit
      
          
       # PM_PASSWORD: ${{ secrets.pm_password }}
