--- a/.github/workflows/deployto-prox.yml
+++ b/.github/workflows/deployto-prox.yml
@@ -23,6 +23,7 @@ jobs:
   provision:
     name: provision on proxmox
     runs-on: ubuntu-latest
+    needs: terraform-validate
     steps:
       - uses: actions/checkout@v2.5.0
 
@@ -90,7 +91,7 @@ jobs:
       - name: Terraform Plan
         working-directory: ${{ github.event.inputs.tfpath }}
         env:
-          TF_VAR_pm_password: ${{ secrets.pm_password }}
+          TF_VAR_pm_password: ${{ secrets.PM_PASSWORD }}
         run: |
           echo `pwd`
           echo "tfpath ${{ github.event.inputs.tfpath }}"
